--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     android:gravity="center"
     >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.Toolbar>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,11 +23,7 @@
 
 
 </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="55dp"
-        android:text="TEST"/>
+
 
 
 </LinearLayout>
