--- a/app/src/main/res/layout/fragment_final.xml
+++ b/app/src/main/res/layout/fragment_final.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".View.Fragments.FinalFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.FinalActivity"
     android:orientation="vertical"
     android:gravity="center">
 
@@ -83,6 +83,17 @@
             android:hint="Cuotas"
             android:textSize="20dp"/>
 
+
+
     </LinearLayout>
+    <Button
+        android:id="@+id/cmdNextFinal"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hacer un nuevo pagp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint= "#0e82ff"
+        />
 
 </LinearLayout>
