--- a/app/src/main/res/layout/fragment_monto.xml
+++ b/app/src/main/res/layout/fragment_monto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.MainActivity"
+    tools:context=".View.Fragments.MontoFragment"
     android:orientation="vertical"
     android:gravity="center">
 
