--- a/app/src/main/res/layout/fragment_banco.xml
+++ b/app/src/main/res/layout/fragment_banco.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".View.Fragments.BancoFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_gravity="center"
+    app:cardCornerRadius="20dp"
+    android:backgroundTint="#f1f1f1">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="center">
 
     <TextView
         android:id="@+id/textViewMontoBanco"
@@ -41,5 +51,5 @@
         />
 
 
-
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
