--- a/app/src/main/res/layout/fragment_metodo_de_pago.xml
+++ b/app/src/main/res/layout/fragment_metodo_de_pago.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".View.Fragments.MetodoDePagoFragment"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_gravity="center"
+    app:cardCornerRadius="20dp"
+    android:backgroundTint="#f1f1f1">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="center">
+
 
     <TextView
         android:id="@+id/textViewMontoMetodo"
@@ -36,4 +47,5 @@
         android:backgroundTint= "#0e82ff"
         />
 
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
