--- a/app/src/main/res/layout/fragment_cuotas.xml
+++ b/app/src/main/res/layout/fragment_cuotas.xml
@@ -18,14 +18,32 @@
         android:gravity="center"
         android:layout_gravity="center">
 
-    <TextView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Monto: "
+            android:textSize="30dp"/>
+
+        <TextView
         android:id="@+id/textViewMontoCuota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="MONTO"
-        android:textSize="40dp"
+        android:textSize="30dp"
         android:textAlignment="center"/>
+        </LinearLayout>
 
+    <TextView
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seleccionar Cuotas"/>
     <Spinner
         android:id="@+id/spinnerCuota"
         android:layout_marginRight="50dp"
