--- a/app/src/main/res/layout/fragment_metodo_de_pago.xml
+++ b/app/src/main/res/layout/fragment_metodo_de_pago.xml
@@ -18,16 +18,31 @@
         android:gravity="center"
         android:layout_gravity="center">
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Monto"
+        android:textSize="30dp"/>
     <TextView
         android:id="@+id/textViewMontoMetodo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="MONTO"
-        android:textSize="40dp"
+        android:textSize="30dp"
         android:textAlignment="center"/>
+</LinearLayout>
 
-    <Spinner
+        <TextView
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleccionar Metodo de Pago"/>
+
+        <Spinner
         android:id="@+id/spinnerMetodo"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
