--- a/app/src/main/res/layout/fragment_monto.xml
+++ b/app/src/main/res/layout/fragment_monto.xml
@@ -17,6 +17,11 @@
         android:gravity="center"
         android:layout_gravity="center">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Monto"/>
+
 
     <EditText
         android:id="@+id/editTextMonto"
